--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "powerpuff artists",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "colors": "^1.4.0",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
@@ -24,8 +25,10 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "react-bootstrap": "^2.10.8",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-icons": "^5.4.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.2"
   }
