--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "powerpuff artists",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
     "colors": "^1.4.0",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
