--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.6.0",
     "colors": "^1.4.0",
     "concurrently": "^9.0.1",
     "cookie-parser": "^1.4.7",
