--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,7 @@
   to   = "https://designsphere-rhhj.onrender.com/api/v1/:splat"
   status = 200
   force = true
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
