--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "designsphere-server",
-    "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
-    },
-    "dependencies": {
-      "bcryptjs": "^3.0.2",
-      "cloudinary": "^2.6.0",
-      "colors": "^1.4.0",
-      "cookie-parser": "^1.4.7",
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.7",
-      "express": "^4.21.1",
-      "jsonwebtoken": "^9.0.2",
-      "mongoose": "^8.7.3",
-      "morgan": "^1.10.0",
-      "multer": "^1.4.5-lts.1",
-      "nodemailer": "^6.10.0",
-      "socket.io": "^4.8.1",
-      "uuid": "^11.0.2"
-    },
-    "devDependencies": {
-      "nodemon": "^3.1.7"
-    }
+  "name": "designsphere-server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon server.js",
+    "client": "npm run dev --prefix ../client",
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
+    "socket.io": "^4.8.1",
+    "uuid": "^11.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
-  
+}
